# wisp-arena

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  vcpkg.json
.github/workflows/: windows-client.yml
client/: main.cpp
installer/: wisp-arena.iss
scripts/: build-client.sh  package-windows.ps1  run-multiplayer.sh
server/: package.json  server.js
